Fix users card design (support overflow) in users explore (eg. index).

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -64,7 +64,7 @@ body {
 }
 
 .user-card {
-  border-radius: 10% 30% 50% 60%;
+  border-radius: 10% 30% 50% 30%;
   display: grid;
   justify-content: center;
 }
